@@ -18,6 +18,13 @@ along with the GNU MP Library; see the file COPYING.LIB.  If not, write to
 the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
 MA 02111-1307, USA.
 
+2003-09-24  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/amd64/addlsh1_n.asm: New file.
+	* mpn/amd64/sublsh1_n.asm: New file.
+	* mpn/amd64/rsh1add_n.asm: New file.
+	* mpn/amd64/rsh1sub_n.asm: New file.
+
 2003-09-23  Torbjorn Granlund  <tege@swox.com>
 
 	* gmp-impl.h (MUL_TOOM3_THRESHOLD, SQR_TOOM3_THRESHOLD): Now 128.
